Started testing, added input from the command line, and fixed some issues